# LOOT-MCP

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: evaluate.rs  main.rs
