[package]
name = "loot-mcp"
version = "0.3.2"
edition = "2021"
description = "MCP server for LOOT/libloot (masterlist metadata, load order suggestion)"
license = "MIT"

[[bin]]
name = "loot-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.3", default-features = false, features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libloot = "0.29"
rayon = "1.10"
schemars = "1"

[dev-dependencies]
tempfile = "3"
